--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="dateEvent">Date</string>
     <string name="meeting_title">Title e.g. Discussion with John and team</string>
     <string name="add">Add</string>
+    <string name="room_already_booked">Room already booked</string>
 </resources>
